sticky sidebar fix (to avoid flickering)

--- a/src/@koop-components/page-components/columns/_columns.scss
+++ b/src/@koop-components/page-components/columns/_columns.scss
@@ -135,7 +135,7 @@ $gutter: 1em;
         left: 1em;
         width: 20em;
         overflow: auto;
-        height: 100vh;
+        bottom: 1em;
       }
 
       &::before {
